--- a/src/styles/blogs.css
+++ b/src/styles/blogs.css
@@ -13,7 +13,7 @@
 .mainBlogPage img {
   justify-content: center;
   text-align: center;
-  /* width: 100%; */
+  width: 100%;
   /* padding: 0 100px; */
 }
 .blogImageStyleMain {
